JwtAuthenticationFilter: load user role as a Spring Security authority